force-app/main/default/objects/KDCE_TnCAccepted__c/KDCE_TnCAccepted__c.object-meta.xml
<CustomObject>
    <description>[KDCE]Terms and Conditions Accepted</description>
    <label>Terms and Conditions Accepted</label>
    <nameField>
        <displayFormat>TCA-{YY}{MM}{DD}{00000}</displayFormat>
        <label>RecordNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions Accepted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>