force-app/main/default/objects/KDCE_TnCAccepted__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Accepted</description>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>