force-app/main/default/objects/KDCE_TnCAccepted__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Terms and Conditions Accepted</relationshipLabel>
    <relationshipName>TnCAccepted</relationshipName>
    <type>Lookup</type>
</CustomField>