force-app/main/default/objects/KDCE_TnCAccepted__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>[KDCE] External Id</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>