force-app/main/default/objects/KDCE_TnCAccepted__c/fields/fm_Channel__c.field-meta.xml
<CustomField>
    <fullName>fm_Channel__c</fullName>
    <description>Terms and Condition Version Set Channel Name</description>
    <formula>TEXT(TnCVersionSet__r.Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Terms and Condition Version Set Channel Name</inlineHelpText>
    <label>Channel</label>
    <type>Text</type>
</CustomField>