force-app/main/default/objects/KDCE_TnCAccepted__c/fields/fm_InformationOptIn__c.field-meta.xml
<CustomField>
    <fullName>fm_InformationOptIn__c</fullName>
    <description>Information Opt-In of relevant Terms and Conditions Version Set</description>
    <formula>TnCVersionSet__r.InfomationOptin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Information Opt-In of relevant Terms and Conditions Version Set</inlineHelpText>
    <label>Information Opt-In</label>
    <type>Checkbox</type>
</CustomField>