force-app/main/default/objects/KDCE_TnCAccepted__c/fields/fm_MarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>fm_MarketingOptIn__c</fullName>
    <description>Marketing Opt-In of relevant Terms and Conditions Version Set</description>
    <formula>TnCVersionSet__r.MarketingOptin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Marketing Opt-In of relevant Terms and Conditions Version Set</inlineHelpText>
    <label>Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>