force-app/main/default/objects/KDCE_TnCAccepted__c/fields/fm_TnC__c.field-meta.xml
<CustomField>
    <fullName>fm_TnC__c</fullName>
    <description>[KDCE] T&amp;C Name</description>
    <formula>TEXT( TnCVersionSet__r.Channel__c ) + &apos; &apos;+ TEXT(TnCVersionSet__r.ChannelNo__c) +&apos;.&apos;+ TnCVersionSet__r.fm_TnCName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term &amp; Condition</label>
    <type>Text</type>
</CustomField>