force-app/main/default/objects/KDCE_TnCAccepted__c/fields/TnC__c.field-meta.xml
<CustomField>
    <fullName>TnC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] Terms and Conditions Lookup Id</description>
    <label>Terms and Conditions</label>
    <referenceTo>TermsandConditions__c</referenceTo>
    <relationshipName>TaCAcceptances</relationshipName>
    <type>Lookup</type>
</CustomField>