force-app/main/default/objects/KDCE_TnCAccepted__c/fields/TnCVersionSet__c.field-meta.xml
<CustomField>
    <fullName>TnCVersionSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] TnCVersionSet</description>
    <label>Terms and Conditions Version Set</label>
    <referenceTo>KDCE_TnCVersionSet__c</referenceTo>
    <relationshipLabel>Terms and Conditions Accepted</relationshipLabel>
    <relationshipName>Terms_and_Conditions_Accepted</relationshipName>
    <type>Lookup</type>
</CustomField>